--- a/racquetFinder.html
+++ b/racquetFinder.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="racquetFinder.css" />
     <title>Racquet Finder</title>
   </head>
   <body>
@@ -27,7 +28,7 @@
           <h3 id="errormessage"></h3>
         </div>
       </div>
-      <div id="racquetContainer"></div>
+      <div id="racquetcontainer"></div>
       <div id="bench"></div>
     </div>
     <script src="racquetFinder.js"></script>
