Added Babolat search functionality

--- a/racquetFinder.html
+++ b/racquetFinder.html
@@ -23,7 +23,9 @@
           <input type="checkbox" id="popular" value="Popular" />
           <label for="popular">Popular</label>
         </div>
-        <button type="button" id="find">Find</button>
+        <div id="buttons">
+          <button type="button" id="find">Find</button>
+        </div>
         <div>
           <h3 id="errormessage"></h3>
         </div>
