--- a/racquetFinder.html
+++ b/racquetFinder.html
@@ -24,10 +24,7 @@
           <label for="popular">Popular</label>
         </div>
         <div id="buttons">
-          <button type="button" id="find">Find</button>
-        </div>
-        <div>
-          <h3 id="errormessage"></h3>
+          <button type="button" id="find">Search</button>
         </div>
       </div>
       <div id="racquetcontainer"></div>
